# ocaml-text

./: .gitignore  .project  CHANGES  LICENSE  META.in  Makefile  README  _oasis  _tags  api.odocl  boring  dune-project  encoding.mllib  encoding.odocl  myocamlbuild.ml  opam  predist.sh  setup.ml  text.opam  text_pcre.opam  text_pcre_syntax.opam
doc/: index.html
doc/text/: index.html
examples/: Makefile  iconv.ml  iconv_lwt.ml  lwt_encoding.ml  lwt_encoding.mli  regexp.ml
manual/: Makefile  manual.tex
src/: META  META.ab  check_iconv.ml  common.h  dune  enc_string.ml  enc_string.mli  enc_utf8.ml  enc_utf8.mli  encoding.ml  encoding.mli  encoding_bigarray.ml  encoding_bigarray.mli  encoding_table.ml  encoding_table.mli  libiconv_stubs.clib  libtext-bigarray_stubs.clib  libtext_stubs.clib  ml_iconv.c  ml_text.c  ml_text_bigarray.c  pcre.mllib  text-bigarray.mldylib  text.ml  text.mli  text.mllib  text_pcre.ml  text_pcre.mli  text_pcre.mllib
src_pcre/: dune  text_pcre.ml
syntax/: dune  pa_text_env.ml  pa_text_env.mli  pa_text_main.ml  pa_text_parse.ml  pa_text_parse.mli  pa_text_pcre.ml  pa_text_pcre.mllib  pa_text_regexp.ml  pa_text_regexp.mli  pa_text_types.ml  pa_text_util.ml  pa_text_util.mli  text-pcre-syntax.mllib
tests/: dune  test.ml
tools/: dump_python_aliases.py  dump_python_encodings.py  gen_marshaled.ml  size_stats.sh
